# rp-pi-pico-GUI

./: CMakeLists.txt  Doxyfile  README.md  pico_sdk_import.cmake
.github/workflows/: cmake.yml
GUI_lib/: TODO.md
GUI_lib/src/: IVGA.cpp
dev/: CMakeLists.txt
dev/dev/: CMakeLists.txt  main.cpp  notes.md
dev/log/: CMakeLists.txt  main.cpp
dev/photoshoot/: CMakeLists.txt  main.cpp  notes.md
dev/test/: CMakeLists.txt  main.cpp
docs/html/: _absolute_layout_8hpp_source.html  _activatable_8hpp_source.html  _bindable_property_8hpp_source.html  _bounds_8hpp_source.html  _button_8hpp_source.html  _check_box_8hpp_source.html  _circle_8hpp_source.html  _clickable_8hpp_source.html  _cursor_8hpp_source.html  _dispatcher_8hpp_source.html  _element_8hpp_source.html  _entry_8hpp_source.html  _i_v_g_a_8hpp_source.html  _label_8hpp_source.html  _layout_8hpp_source.html  _line_8hpp_source.html  _margin_8hpp_source.html  _mouse_dispatcher_8hpp_source.html  _mouse_event_8hpp_source.html  _page1_8hpp_source.html  _page2_8hpp_source.html  _page_8hpp_source.html  _polyline_8hpp_source.html  _progress_bar_8hpp_source.html  _radio_button_8hpp_source.html  _rectangle_8hpp_source.html  _s_d_wrapper_8hpp_source.html  _slider_8hpp_source.html  _speed_test_8hpp_source.html  _sprite_8hpp_source.html  _sprite_data_8hpp_source.html  _stack_layout_8hpp_source.html  _stepper_8hpp_source.html  _switch_8hpp_source.html  _timers_8hpp_source.html  _types_8hpp_source.html  _v_colors_8hpp_source.html  _view_8hpp_source.html  _visual_element_8hpp_source.html  annotated.html  (+291 more)
docs/latex/: _absolute_layout_8hpp_source.tex  _activatable_8hpp_source.tex  (+213 more)
examples/: CMakeLists.txt
examples/KitControl/: CMakeLists.txt  Page1.hpp  Page2.hpp  main.cpp  quadrature_encoder.pio
examples/RpKit/: CMakeLists.txt  main.cpp  quadrature_encoder.c
examples/dev/: CMakeLists.txt  main.cpp  tusb_config.h
gui/: CMakeLists.txt
gui/GUI_lib/: CMakeLists.txt
gui/GUI_lib/include/: IVGA.hpp  RP_GUI.hpp  VColors.hpp  timers.hpp
gui/GUI_lib/src/: hid_handler.cpp
lib/: CMakeLists.txt
lib/GUI_lib/: CMakeLists.txt  TODO.md
lib/GUI_lib/config/: settings.hpp  vga_config.h
lib/GUI_lib/include/: CMakeLists.txt  IVGA.hpp  RP_GUI.hpp  VColors.hpp  include.hpp  rp_core.hpp  rpgui.hpp  tusb_data.hpp
lib/GUI_lib/include/common/: Base.hpp  BindableProperty.hpp  Clickable.hpp  Sprite.hpp  Types.hpp  View.hpp
lib/GUI_lib/include/elements/: Button.h  Button.hpp  CheckBox.h  CheckBox.hpp  Cursor.hpp  Entry.h  Entry.hpp  Label.h  Label.hpp  Line.h  Line.hpp  Polyline.h  Polyline.hpp  ProgressBar.h  ProgressBar.hpp  RadioButton.h  RadioButton.hpp  Rectangle.h  Rectangle.hpp  Slider.h  Slider.hpp  Stepper.h  Stepper.hpp  Switch.h  Switch.hpp
lib/GUI_lib/include/events/: DemoEvent.hpp  Dispatcher.hpp  Event.hpp  MouseDispatcher.hpp  MouseEvent.hpp
lib/GUI_lib/include/layouts/: AbsoluteLayout.hpp  Layout.hpp  StackLayout.hpp
lib/GUI_lib/include/pages/: Page.hpp
lib/GUI_lib/src/: IVGA.cpp  hid_handler.cpp  rp_core.cpp
lib/GUI_lib/src/common/: Base.cpp  Clickable.cpp  Sprite.cpp  View.cpp
lib/GUI_lib/src/elements/: Button.cpp  CheckBox.cpp  Cursor.cpp  Entry.cpp  Label.cpp  Line.cpp  Polyline.cpp  ProgressBar.cpp  RadioButton.cpp  Rectangle.cpp  Slider.cpp  Stepper.cpp  Switch.cpp
lib/GUI_lib/src/events/: Dispatcher.cpp  MouseDispatcher.cpp  MouseEvent.cpp
lib/GUI_lib/src/layouts/: AbsoluteLayout.cpp  Layout.cpp  StackLayout.cpp
lib/GUI_lib/src/util/: PicoImgDynamic.cpp
lib/GUI_lib/util/: PicoImgDynamic.cpp  PicoImgDynamic.hpp  hid_handler.cpp  timers.hpp
lib/SDwrapper_lib/: CMakeLists.txt
lib/SDwrapper_lib/include/: SDWrapper.hpp
lib/SDwrapper_lib/src/: SDWrapper.cpp
lib/gui_lib/: CMakeLists.txt  TODO.md
lib/gui_lib/config/: settings.hpp
lib/gui_lib/include/: include.hpp  rp_core.hpp  rpgui.hpp
lib/gui_lib/include/common/: Activatable.hpp  Base.hpp  BindableProperty.hpp  Bounds.hpp  Clickable.hpp  Element.hpp  Margin.hpp  SpriteData.hpp  Types.hpp  VColors.hpp  View.hpp  VisualElement.hpp
lib/gui_lib/include/elements/: Button.hpp  CheckBox.hpp  Circle.hpp  Cursor.hpp  Entry.hpp  Label.hpp  Line.hpp  Polyline.hpp  ProgressBar.hpp  RadioButton.hpp  Rectangle.hpp  Slider.hpp  Sprite.hpp  Stepper.hpp  Switch.hpp
lib/gui_lib/include/events/: Dispatcher.hpp  MouseDispatcher.hpp  MouseEvent.hpp
lib/gui_lib/include/layouts/: AbsoluteLayout.hpp  Layout.hpp  StackLayout.hpp
lib/gui_lib/include/pages/: Page.hpp
lib/gui_lib/src/: rp_core.cpp
lib/gui_lib/src/common/: Base.cpp  Clickable.cpp  Element.cpp  View.cpp  VisualElement.cpp
lib/gui_lib/src/elements/: Button.cpp  CheckBox.cpp  Circle.cpp  Cursor.cpp  Entry.cpp  Label.cpp  Line.cpp  Polyline.cpp  ProgressBar.cpp  RadioButton.cpp  Slider.cpp  Sprite.cpp  Stepper.cpp  Switch.cpp
lib/gui_lib/src/events/: MouseDispatcher.cpp
lib/gui_lib/src/layouts/: AbsoluteLayout.cpp  Layout.cpp  StackLayout.cpp
lib/gui_lib/util/: IVGA.cpp  IVGA.hpp  Timers.cpp  Timers.hpp  hid_handler.cpp  tusb_data.hpp
lib/qvga_lib/: CMakeLists.txt
lib/qvga_lib/include/qvga/: config.h  pwmsnd.h
lib/qvga_lib/src/: draw.cpp  mat2d.cpp  qvga.cpp
lib/rplog_lib/: CMakeLists.txt
lib/rplog_lib/include/: rp_logger.hpp
lib/rplog_lib/src/: hw_config.c  rp_logger.cpp
lib/vga_lib/: CMakeLists.txt
lib/vga_lib/font/: font_boldB_8x16.cpp
lib/vga_lib/include/: global.h
lib/vga_lib/include/util/: canvas.h  mat2d.h  overclock.h  print.h  pwmsnd.h  rand.h
lib/vga_lib/include/vga/: vga.h  vga.pio.h  vga_layer.h  vga_vmode.h
lib/vga_lib/render/: vga_color.S  vga_ctext.S  vga_graph8.S  vga_graph8persp.S  vga_gtext.S  vga_sprite.S
lib/vga_lib/src/: print.cpp  vga.cpp  vga_pal.cpp
qvga/: CMakeLists.txt
qvga/examples/VGAHID/: CMakeLists.txt  IVGA.hpp  RpiEvent.cpp  RpiEvent.hpp  RpiUI.hpp  VColors.hpp  hid_app.cpp  main.cpp  pong.hpp  tusb_data.hpp
qvga/tools/: CMakeLists.txt
qvga/tools/PicoClock/: PicoClock.cpp
qvga/tools/RaspPicoImg/: RaspPicoImg.cpp
qvga/tools/RaspPicoSnd/: RaspPicoSnd.cpp
qvga/tools/pal332/: pal332.cpp
vga_lib/: CMakeLists.txt
(+143 files in other folders)
